# jorg

./: .gitignore  CMakeLists.txt  README.md
modules/: FindSDL2.cmake
src/: CMakeLists.txt  JorgApplication.cpp  MyApplication.cpp  TexturedTriangleShader.cpp  TexturedTriangleShader.h  resources.conf
